#373 code cleanup and import optimization